<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/reg_strate"
                android:textColor="#000000"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="3dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/usuario"
                            tools:ignore="DuplicateIds,NestedWeights"
                            android:contentDescription="@string/todo" />

                        <EditText
                            android:id="@+id/editTextTextEmailAddress2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:minHeight="48dp"
                            tools:text="Usuario"
                            android:autofillHints=""
                            tools:ignore="LabelFor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="10dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/contrasena"
                            android:contentDescription="@string/todoa"
                            tools:ignore="NestedWeights" />

                        <EditText
                            android:id="@+id/editTextTextPassword"
                            android:layout_width="216dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            tools:text="Contraseña"
                            android:autofillHints=""
                            tools:ignore="LabelFor" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="@string/recu_rdame"
                tools:ignore="VisualLintButtonSize" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:text="@string/continuar" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ya_tienes_una_cuenta" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/log_in"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>